syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.auth";
option java_outer_classname = "AuthProto";

import "common/common.proto";

package auth;

service AuthService {
	rpc CheckAuth(CheckAuthReq) returns (CheckAuthResp);
};

message CheckAuthReq {
	string uid = 1;
	string token = 2;
}

message CheckAuthResp {
	common.ResultType result = 1;	
}
